# PharmaSUG-DevOps-for-Pharma

./: .gitignore  Dockerfile  Makefile  PharmaSUG.Rproj  README.md  docker-compose.yml  pyproject.toml  sample.sqlite
.github/workflows/: CI.yml
output/artifacts/: patient_characteristics_tables.docx
output/notebooks/: 01_inclusion.html  01_inclusion.ipynb  02_generate_tfl.html  02_generate_tfl.ipynb  papermill.ipynb
scripts/: generate_data.py
source/: papermill.ipynb
source/notebooks/: 01_inclusion.ipynb  02_generate_tfl.Rmd  sample.sqlite
source/notebooks/helpers/: config.py  db.py  jupytext_converter.py
